ingress-controller/devk8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: efk-ingress
  namespace: efk
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
spec:
  rules:
  # Kibana for logging
  - host: kibana4log.devk8s
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana4log
          servicePort: 443
  # Cerebro for logging elasticsearch
  - host: cerebro4log.devk8s
    http:
      paths:
      - path: /
        backend:
          serviceName: cerebro4log
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metrics-ingress
  namespace: metrics
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
spec:
  rules:
  # Grafana for metrics
  - host: grafana.devk8s
    http:
      paths:
      - path: /
        backend:
          serviceName: monitor-grafana
          servicePort: 80
  # Prometheus for metrics
  - host: prometheus.devk8s
    http:
      paths:
      - path: /
        backend:
          serviceName: monitor-prometheus-operato-prometheus
          servicePort: 9090
  # Prometheus alert manager for metrics
  - host: alertmanager.devk8s
    http:
      paths:
      - path: /
        backend:
          serviceName: monitor-prometheus-operato-alertmanager
          servicePort: 9093

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-ingress
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
    # nginx.org/ssl-services: "rook-ceph-mgr-dashboard"    
    # ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: "/"    
spec:
  tls:
  - hosts:
    - devk8s.10010sh.cn
    secretName: universal-10010sh-cn-tls
  rules:
  - host: devk8s.10010sh.cn
    http:
      paths:
      - path: /cephdashboard
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 8443

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "internal-nginx" 
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    # nginx.org/ssl-services: "k8sviewer-kubernetes-dashboard"
    # ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - devk8s.10010sh.cn
    secretName: universal-10010sh-cn-tls
  rules:
  - host: devk8s.10010sh.cn
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: k8sviewer-kubernetes-dashboard
          servicePort: 443
